[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcg_benchmark"
version = "0.1.0"
description = "A package for \"Procedural Content Generation Benchmark\" to test and compare your pcg algorithm against each other."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Ahmed Khalifa", email = "ahmed@akhalifa.com" },
]
dependencies = [
  "numpy>=1.22",
  "pillow",
]
urls = { Homepage = "https://github.com/amidos2006/pcg-benchmark" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pcg_benchmark = ["*", "**"]
